<resources>
    <string name="app_name">Unite4_KararveDonguYapilari</string>
    <string name="uyg1_name">Uygulama-1(100 den büyük)</string>
    <string name="uyg2_name">Uygulama-2(Hangisi Büyük)</string>
    <string name="uyg3_name">Uygulama-3</string>
    <string name="uyg4_name">Uygulama-4</string>
    <string name="uyg5_name">Uygulama-5</string>
    <string name="uyg6_name">Uygulama-6</string>
    <string name="uyg7_name">Uygulama-7</string>
    <string name="uyg8_name">Uygulama-8</string>
    <string name="uyg9_name">Uygulama-9</string>
    <string name="uyg10_name">Uygulama-10</string>




</resources>
