<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnUyg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/uyg1_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUyg8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg8_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg7"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg7" />

    <Button
        android:id="@+id/btnUyg6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg6_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg5"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg5" />

    <Button
        android:id="@+id/btnUyg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/uyg3_name"
        app:layout_constraintStart_toStartOf="@+id/btnUgy2"
        app:layout_constraintTop_toBottomOf="@+id/btnUgy2" />

    <Button
        android:id="@+id/btnUyg9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg9_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg8"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg8" />

    <Button
        android:id="@+id/btnUyg7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/uyg7_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg6"
        app:layout_constraintTop_toTopOf="@+id/btnUyg6" />

    <Button
        android:id="@+id/btnUyg5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg5_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg4"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg4" />

    <Button
        android:id="@+id/btnUyg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg4_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg3"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg3" />

    <Button
        android:id="@+id/btnUyg10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg10_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg9"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg9" />

    <Button
        android:id="@+id/btnUgy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyg2_name"
        app:layout_constraintStart_toStartOf="@+id/btnUyg1"
        app:layout_constraintTop_toBottomOf="@+id/btnUyg1" />

</androidx.constraintlayout.widget.ConstraintLayout>